# project-planton

./: .bazelproject  .bazelrc  .dockerignore  .env.test  .gitignore  .goreleaser.yaml  .prettierrc  BUILD.bazel  CHANGELOG.md  CODE-OF-CONDUCT.md  CONTRIBUTING.md  Dockerfile.backend  MODULE.bazel  Makefile  README-Docker.md  README.md  _analysis-unified-docker-status.md  bazelw  buf-lint-ignore.research.prompt.md  buf-lint-ignore.research.report.md  buf.gen.yaml  buf.yaml  contributor-guide.md  docker-compose.yml  go-vet-in-bazel.research.prompt  go.mod  go.sum  go.work  go.work.sum  main.diff  main.go  module-git-repos.yaml  package.json  quick-test.sh  test-cli-commands.sh
apis/org/project_planton/shared/: BUILD.bazel  iac.pb.go  metadata.pb.go  metadata.proto
apis/org/project_planton/shared/cloudresourcekind/: BUILD.bazel  cloud_resource_kind.pb.go  cloud_resource_kind.proto  cloud_resource_provider.pb.go  cloud_resource_provider.proto  kubernetes.pb.go  kubernetes.proto
apis/org/project_planton/shared/gcp/: BUILD.bazel  gcp.pb.go  gcp.proto
apis/org/project_planton/shared/kubernetes/: BUILD.bazel  kubernetes.pb.go  kubernetes.proto  options.pb.go  options.proto  probe.pb.go  probe.proto  target_cluster.pb.go  target_cluster.proto
apis/org/project_planton/shared/options/: BUILD.bazel  options.pb.go
apis/org/project_planton/shared/validateutil/: BUILD.bazel
apis/project/planton/shared/: BUILD.bazel  iac.pb.go  iac.proto  metadata.pb.go  metadata.proto  metadata_test.go  shared.pb.go  shared.proto  status.pb.go  status.proto
apis/project/planton/shared/cloudresourcekind/: BUILD.bazel  cloud_resource_kind.pb.go  cloud_resource_kind.proto  cloud_resource_provider.pb.go  cloud_resource_provider.proto  kubernetes.pb.go  kubernetes.proto
apis/project/planton/shared/gcp/: BUILD.bazel  gcp.pb.go  gcp.proto
apis/project/planton/shared/kubernetes/: BUILD.bazel  kubernetes.pb.go  (+7 more)
cmd/project-planton/: BUILD.bazel  CLI-HELP.md  HELP.md  README.md  root.go
cmd/project-planton/root/: BUILD.bazel  apply.go  checkout.go  cloud_resource_apply.go  cloud_resource_create.go  cloud_resource_delete.go  cloud_resource_get.go  cloud_resource_list.go  cloud_resource_update.go  config.go  credential_create.go  credential_delete.go  credential_get.go  credential_list.go  credential_update.go  destroy.go  downgrade.go  init.go  list_deployment_component.go  load-manifest.go  load_manifest.go  modules_version.go  plan.go  pull.go  pulumi.go  refresh.go  stack_job_stream_output.go  stack_update_stream_output.go  stream.go  tofu.go  upgrade.go  validate-manifest.go  validate_manifest.go  version.go
cmd/project-planton/root/pulumi/: BUILD.bazel  README.md  cancel.go  delete.go  destroy.go  init.go  preview.go  refresh.go  update.go
cmd/project-planton/root/tofu/: BUILD.bazel  README.md  apply.go  destroy.go  generate_variables.go  init.go  load_tfvars.go  plan.go  refresh.go
cmd/project-planton/root/webapp/: BUILD.bazel  init.go  logs.go  restart.go  start.go  status.go  stop.go  uninstall.go  webapp.go
internal/apidocs/: BUILD.bazel  api_docs.go  get_message_docs.go
internal/cli/cliprint/: BUILD.bazel  print.go  symbols.go
internal/cli/iacflags/: BUILD.bazel  execution_flags.go  manifest_source_flags.go  provider_config_flags.go  pulumi_flags.go  tofu_flags.go
internal/cli/iacrunner/: BUILD.bazel  context.go  resolve_context.go  run_pulumi.go  run_tofu.go
internal/cli/manifest/: BUILD.bazel  resolve_from_clipboard.go  resolve_from_stack_input.go  resolver.go
internal/cli/staging/: BUILD.bazel  staging.go
internal/cli/upgrade/: BUILD.bazel  direct.go  homebrew.go  platform.go  upgrade.go  version.go  version_test.go
internal/cli/workspace/: BUILD.bazel  workspace.go
internal/manifest/: BUILD.bazel  README.md  kind_extractor.go  kind_map.go  load_manifest.go  manifest_validator.go  nogo_printf_regression_test.go  print.go  spec_extractor.go  values_setter.go
internal/manifest/manifestprotobuf/: BUILD.bazel  field_setter.go  field_setter_test.go
internal/manifest/protodefaults/: BUILD.bazel  README.md  applier.go  applier_test.go  type_converter.go  type_converter_test.go
internal/valuefrom/: BUILD.bazel  value_from.go
pkg/clipboard/: BUILD.bazel  reader.go
pkg/crkreflect/: BUILD.bazel  get_kubernetes_resource_category.go  get_kubernetes_resource_type.go  get_provider.go  group_version.go  id_prefix.go  id_prefix_from_id.go  kind_by_id_prefix.go  kind_by_id_prefix_test.go  kind_by_kind_name.go  kind_extractor.go  kind_from_string.go  kind_from_string_test.go  kind_from_yaml.go  kind_map_gen.go  kind_meta.go  kind_name_by_kind.go  kind_to_kind_meta_map.go  kinds_list.go  new_instance.go  provider_meta.go  providers_list.go
pkg/crkreflect/codegen/: BUILD.bazel  main.go
pkg/fileutil/: BUILD.bazel  file_util.go
pkg/iac/gitrepo/: BUILD.bazel  extract_repo_name.go  git_repo.go  local_repo.go
pkg/iac/localmodule/: BUILD.bazel  local_module.go
pkg/iac/provisioner/: BUILD.bazel  provisioner.go
pkg/iac/stackinput/: BUILD.bazel  credentials.go  extract_manifest.go  providers.go  stack_input.go
pkg/iac/stackinput/credentials/: confluent_credential.go  snowflake_credential.go
pkg/iac/stackinput/stackinputcredentials/: BUILD.bazel  aws_credential.go  azure_credential.go  confluent_credential.go  docker_credential.go  gcp_credential.go  kubernetes_cluster.go  mongodb_atlas_credential.go  options.go  snowflake_credential.go
pkg/iac/stackinput/stackinputproviderconfig/: BUILD.bazel  atlas_provider.go  auth0_provider.go  aws_provider.go  azure_provider.go  cloudflare_provider.go  confluent_provider.go  env_provider.go  gcp_provider.go  kubernetes_provider.go  openfga_provider.go  options.go  snowflake_provider.go  user_provider.go  user_provider_test.go
pkg/kubernetes/kubecontext/: BUILD.bazel  context.go
pkg/kustomize/builder/: BUILD.bazel  README.md  builder.go
pkg/protobufyaml/: BUILD.bazel  protobuf_yaml.go
pkg/reflection/metadatareflect/: BUILD.bazel  extract_metadata.go  extract_metadata_test.go  inject_metadata.go  inject_metadata_test.go
(+16317 files in other folders)
