load("@gazelle//:def.bzl", "gazelle", "gazelle_binary")
load("@rules_buf//buf:defs.bzl", "buf_lint_test")
load("@rules_go//go:def.bzl", "go_binary", "go_library")

# gazelle:prefix github.com/project-planton/project-planton

# Nothing to export at repo root; apis/BUILD.bazel exports buf.yaml

# Gazelle with Buf extension enabled
gazelle_binary(
    name = "gazelle-buf",
    languages = [
        "@gazelle//language/go",
        "@gazelle//language/proto",
        "@rules_buf//gazelle/buf:buf",
    ],
)

gazelle(
    name = "gazelle",
    gazelle = ":gazelle-buf",
)

# Run Buf lint at the module root based on apis/buf.yaml
buf_lint_test(
    name = "apis_buf_lint",
    targets = [],
)

go_library(
    name = "project-planton_lib",
    srcs = ["main.go"],
    importpath = "github.com/project-planton/project-planton",
    visibility = ["//visibility:private"],
    deps = [
        "//cmd/project-planton",
        "//internal/cli/panic",
    ],
)

go_binary(
    name = "project-planton",
    embed = [":project-planton_lib"],
    visibility = ["//visibility:public"],
)
