module(
    name = "project_planton",
)

# ─── Go rules + Gazelle ──────────────────────────────────────────────────────
bazel_dep(name = "rules_go", version = "0.57.0")
bazel_dep(name = "gazelle", version = "0.45.0")

# Pin the Go toolchain Bazel uses (hermetic; no host Go required)
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.0")
go_sdk.nogo(nogo = "//:project_planton_nogo")

# Read Go deps from this repo's go.mod (bzlmod-friendly)
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
go_deps.module(
    path = "buf.build/go/protovalidate",
    sum = "h1:kr/rC/no+DtRyYX+8KXLDxNnI1rINz0imk5K44ZpZ3A=",
    version = "v0.14.0",
)
go_deps.module(
    path = "golang.org/x/tools",
    sum = "h1:zdAyfUGbYmuVokhzVmghFl2ZJh5QhcfebBgmVPFYA+8=",
    version = "v0.15.0",
)
use_repo(
    go_deps,
    "build_buf_gen_go_bufbuild_protovalidate_protocolbuffers_go",
    "build_buf_go_protovalidate",
    "com_github_blang_semver",
    "com_github_fatih_color",
    "com_github_google_uuid",
    "com_github_hashicorp_hcl_v2",
    "com_github_iancoleman_strcase",
    "com_github_masterminds_sprig",
    "com_github_oklog_ulid_v2",
    "com_github_onsi_ginkgo_v2",
    "com_github_onsi_gomega",
    "com_github_pkg_errors",
    "com_github_pseudomuto_protoc_gen_doc",
    "com_github_pulumi_pulumi_aws_native_sdk",
    "com_github_pulumi_pulumi_aws_sdk_v6",
    "com_github_pulumi_pulumi_aws_sdk_v7",
    "com_github_pulumi_pulumi_azure_native_sdk_containerregistry_v2",
    "com_github_pulumi_pulumi_azure_native_sdk_containerservice_v3",
    "com_github_pulumi_pulumi_azure_native_sdk_resources_v2",
    "com_github_pulumi_pulumi_azure_native_sdk_resources_v3",
    "com_github_pulumi_pulumi_azure_native_sdk_v2",
    "com_github_pulumi_pulumi_azure_native_sdk_v3",
    "com_github_pulumi_pulumi_azure_sdk_v5",
    "com_github_pulumi_pulumi_civo_sdk_v2",
    "com_github_pulumi_pulumi_cloudflare_sdk_v6",
    "com_github_pulumi_pulumi_confluentcloud_sdk_v2",
    "com_github_pulumi_pulumi_digitalocean_sdk_v4",
    "com_github_pulumi_pulumi_gcp_sdk_v7",
    "com_github_pulumi_pulumi_gcp_sdk_v8",
    "com_github_pulumi_pulumi_kubernetes_sdk_v4",
    "com_github_pulumi_pulumi_mongodbatlas_sdk_v3",
    "com_github_pulumi_pulumi_random_sdk_v4",
    "com_github_pulumi_pulumi_sdk_v3",
    "com_github_pulumi_pulumi_snowflake_sdk_v2",
    "com_github_pulumi_pulumi_tls_sdk_v4",
    "com_github_pulumi_pulumi_tls_sdk_v5",
    "com_github_sirupsen_logrus",
    "com_github_spf13_cobra",
    "com_github_spf13_pflag",
    "com_github_stretchr_testify",
    "com_github_zclconf_go_cty",
    "in_gopkg_yaml_v3",
    "io_k8s_api",
    "io_k8s_sigs_kustomize_api",
    "io_k8s_sigs_kustomize_kyaml",
    "io_k8s_sigs_yaml",
    "io_k8s_utils",
    "org_golang_google_protobuf",
    "org_golang_x_tools",
)

# NOTE: Run `bazel mod tidy` to expand the required use_repo(...) entries below.
# Bazel will add the repositories provided by the extensions above.
