load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "apidocs",
    srcs = ["api_docs.go"],
    importpath = "github.com/project-planton/project-planton/internal/apidocs",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/cli/version",
        "@com_github_pkg_errors//:errors",
        "@com_github_pseudomuto_protoc_gen_doc//:protoc-gen-doc",
    ],
)
