load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "manifest",
    srcs = [
        "load_manifest.go",
        "manifest_validator.go",
        "print.go",
        "spec_extractor.go",
        "values_setter.go",
    ],
    importpath = "github.com/project-planton/project-planton/internal/manifest",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/cli/workspace",
        "//internal/manifest/manifestprotobuf",
        "//pkg/crkreflect",
        "//pkg/ulidgen",
        "@com_github_bufbuild_protovalidate_go//:protovalidate-go",
        "@com_github_pkg_errors//:errors",
        "@io_k8s_sigs_yaml//:yaml",
        "@org_golang_google_protobuf//encoding/protojson",
        "@org_golang_google_protobuf//proto",
    ],
)
