load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "valuefrom",
    srcs = ["value_from.go"],
    importpath = "github.com/project-planton/project-planton/internal/valuefrom",
    visibility = ["//:__subpackages__"],
    deps = ["//apis/org/project-planton/shared/foreignkey/v1:foreignkey"],
)
