load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "valuefrom",
    srcs = ["value_from.go"],
    importpath = "github.com/plantonhq/project-planton/internal/valuefrom",
    visibility = ["//:__subpackages__"],
    deps = ["//apis/org/project_planton/shared/foreignkey/v1:foreignkey"],
)
