load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "clipboard",
    srcs = ["reader.go"],
    importpath = "github.com/plantonhq/project-planton/pkg/clipboard",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_pkg_errors//:errors",
        "@com_github_zyedidia_clipboard//:clipboard",
    ],
)
