load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "crkreflect",
    srcs = [
        "get_kubernetes_resource_category.go",
        "get_provider.go",
        "group_version.go",
        "id_prefix.go",
        "id_prefix_from_id.go",
        "kind_by_id_prefix.go",
        "kind_by_kind_name.go",
        "kind_extractor.go",
        "kind_from_string.go",
        "kind_from_yaml.go",
        "kind_map_gen.go",
        "kind_meta.go",
        "kind_name_by_kind.go",
        "kind_to_kind_meta_map.go",
        "kinds_list.go",
        "new_instance.go",
        "provider_meta.go",
        "providers_list.go",
    ],
    importpath = "github.com/project-planton/project-planton/pkg/crkreflect",
    visibility = ["//visibility:public"],
    deps = [
        "//apis/org/project-planton/provider/_test/testcloudresourceone/v1:testcloudresourceone",
        "//apis/org/project-planton/provider/_test/testcloudresourcethree/v1:testcloudresourcethree",
        "//apis/org/project-planton/provider/_test/testcloudresourcetwo/v1:testcloudresourcetwo",
        "//apis/org/project-planton/provider/atlas/mongodbatlas/v1:mongodbatlas",
        "//apis/org/project-planton/provider/aws/awsalb/v1:awsalb",
        "//apis/org/project-planton/provider/aws/awscertmanagercert/v1:awscertmanagercert",
        "//apis/org/project-planton/provider/aws/awsclientvpn/v1:awsclientvpn",
        "//apis/org/project-planton/provider/aws/awscloudfront/v1:awscloudfront",
        "//apis/org/project-planton/provider/aws/awsdynamodb/v1:awsdynamodb",
        "//apis/org/project-planton/provider/aws/awsec2instance/v1:awsec2instance",
        "//apis/org/project-planton/provider/aws/awsecrrepo/v1:awsecrrepo",
        "//apis/org/project-planton/provider/aws/awsecscluster/v1:awsecscluster",
        "//apis/org/project-planton/provider/aws/awsecsservice/v1:awsecsservice",
        "//apis/org/project-planton/provider/aws/awsekscluster/v1:awsekscluster",
        "//apis/org/project-planton/provider/aws/awseksnodegroup/v1:awseksnodegroup",
        "//apis/org/project-planton/provider/aws/awsiamrole/v1:awsiamrole",
        "//apis/org/project-planton/provider/aws/awsiamuser/v1:awsiamuser",
        "//apis/org/project-planton/provider/aws/awskmskey/v1:awskmskey",
        "//apis/org/project-planton/provider/aws/awslambda/v1:awslambda",
        "//apis/org/project-planton/provider/aws/awsrdscluster/v1:awsrdscluster",
        "//apis/org/project-planton/provider/aws/awsrdsinstance/v1:awsrdsinstance",
        "//apis/org/project-planton/provider/aws/awsroute53zone/v1:awsroute53zone",
        "//apis/org/project-planton/provider/aws/awss3bucket/v1:awss3bucket",
        "//apis/org/project-planton/provider/aws/awssecretsmanager/v1:awssecretsmanager",
        "//apis/org/project-planton/provider/aws/awssecuritygroup/v1:awssecuritygroup",
        "//apis/org/project-planton/provider/aws/awsstaticwebsite/v1:awsstaticwebsite",
        "//apis/org/project-planton/provider/aws/awsvpc/v1:awsvpc",
        "//apis/org/project-planton/provider/azure/azureakscluster/v1:azureakscluster",
        "//apis/org/project-planton/provider/azure/azureaksnodepool/v1:azureaksnodepool",
        "//apis/org/project-planton/provider/azure/azurecontainerregistry/v1:azurecontainerregistry",
        "//apis/org/project-planton/provider/azure/azurednszone/v1:azurednszone",
        "//apis/org/project-planton/provider/azure/azurekeyvault/v1:azurekeyvault",
        "//apis/org/project-planton/provider/azure/azurenatgateway/v1:azurenatgateway",
        "//apis/org/project-planton/provider/azure/azurevpc/v1:azurevpc",
        "//apis/org/project-planton/provider/civo/civobucket/v1:civobucket",
        "//apis/org/project-planton/provider/civo/civocertificate/v1:civocertificate",
        "//apis/org/project-planton/provider/civo/civocomputeinstance/v1:civocomputeinstance",
        "//apis/org/project-planton/provider/civo/civodatabase/v1:civodatabase",
        "//apis/org/project-planton/provider/civo/civodnszone/v1:civodnszone",
        "//apis/org/project-planton/provider/civo/civofirewall/v1:civofirewall",
        "//apis/org/project-planton/provider/civo/civoipaddress/v1:civoipaddress",
        "//apis/org/project-planton/provider/civo/civokubernetescluster/v1:civokubernetescluster",
        "//apis/org/project-planton/provider/civo/civokubernetesnodepool/v1:civokubernetesnodepool",
        "//apis/org/project-planton/provider/civo/civoloadbalancer/v1:civoloadbalancer",
        "//apis/org/project-planton/provider/civo/civovolume/v1:civovolume",
        "//apis/org/project-planton/provider/civo/civovpc/v1:civovpc",
        "//apis/org/project-planton/provider/cloudflare/cloudflared1database/v1:cloudflared1database",
        "//apis/org/project-planton/provider/cloudflare/cloudflarednszone/v1:cloudflarednszone",
        "//apis/org/project-planton/provider/cloudflare/cloudflarekvnamespace/v1:cloudflarekvnamespace",
        "//apis/org/project-planton/provider/cloudflare/cloudflareloadbalancer/v1:cloudflareloadbalancer",
        "//apis/org/project-planton/provider/cloudflare/cloudflarer2bucket/v1:cloudflarer2bucket",
        "//apis/org/project-planton/provider/cloudflare/cloudflareworker/v1:cloudflareworker",
        "//apis/org/project-planton/provider/cloudflare/cloudflarezerotrustaccessapplication/v1:cloudflarezerotrustaccessapplication",
        "//apis/org/project-planton/provider/confluent/confluentkafka/v1:confluentkafka",
        "//apis/org/project-planton/provider/digitalocean/digitaloceanappplatformservice/v1:digitaloceanappplatformservice",
        "//apis/org/project-planton/provider/digitalocean/digitaloceanbucket/v1:digitaloceanbucket",
        "//apis/org/project-planton/provider/digitalocean/digitaloceancertificate/v1:digitaloceancertificate",
        "//apis/org/project-planton/provider/digitalocean/digitaloceancontainerregistry/v1:digitaloceancontainerregistry",
        "//apis/org/project-planton/provider/digitalocean/digitaloceandatabasecluster/v1:digitaloceandatabasecluster",
        "//apis/org/project-planton/provider/digitalocean/digitaloceandnszone/v1:digitaloceandnszone",
        "//apis/org/project-planton/provider/digitalocean/digitaloceandroplet/v1:digitaloceandroplet",
        "//apis/org/project-planton/provider/digitalocean/digitaloceanfirewall/v1:digitaloceanfirewall",
        "//apis/org/project-planton/provider/digitalocean/digitaloceanfunction/v1:digitaloceanfunction",
        "//apis/org/project-planton/provider/digitalocean/digitaloceankubernetescluster/v1:digitaloceankubernetescluster",
        "//apis/org/project-planton/provider/digitalocean/digitaloceankubernetesnodepool/v1:digitaloceankubernetesnodepool",
        "//apis/org/project-planton/provider/digitalocean/digitaloceanloadbalancer/v1:digitaloceanloadbalancer",
        "//apis/org/project-planton/provider/digitalocean/digitaloceanvolume/v1:digitaloceanvolume",
        "//apis/org/project-planton/provider/digitalocean/digitaloceanvpc/v1:digitaloceanvpc",
        "//apis/org/project-planton/provider/gcp/gcpartifactregistryrepo/v1:gcpartifactregistryrepo",
        "//apis/org/project-planton/provider/gcp/gcpcertmanagercert/v1:gcpcertmanagercert",
        "//apis/org/project-planton/provider/gcp/gcpcloudcdn/v1:gcpcloudcdn",
        "//apis/org/project-planton/provider/gcp/gcpcloudfunction/v1:gcpcloudfunction",
        "//apis/org/project-planton/provider/gcp/gcpcloudrun/v1:gcpcloudrun",
        "//apis/org/project-planton/provider/gcp/gcpcloudsql/v1:gcpcloudsql",
        "//apis/org/project-planton/provider/gcp/gcpdnszone/v1:gcpdnszone",
        "//apis/org/project-planton/provider/gcp/gcpgcsbucket/v1:gcpgcsbucket",
        "//apis/org/project-planton/provider/gcp/gcpgkeaddonbundle/v1:gcpgkeaddonbundle",
        "//apis/org/project-planton/provider/gcp/gcpgkecluster/v1:gcpgkecluster",
        "//apis/org/project-planton/provider/gcp/gcpgkeclustercore/v1:gcpgkeclustercore",
        "//apis/org/project-planton/provider/gcp/gcpgkenodepool/v1:gcpgkenodepool",
        "//apis/org/project-planton/provider/gcp/gcpgkeworkloadidentitybinding/v1:gcpgkeworkloadidentitybinding",
        "//apis/org/project-planton/provider/gcp/gcpproject/v1:gcpproject",
        "//apis/org/project-planton/provider/gcp/gcprouternat/v1:gcprouternat",
        "//apis/org/project-planton/provider/gcp/gcpsecretsmanager/v1:gcpsecretsmanager",
        "//apis/org/project-planton/provider/gcp/gcpserviceaccount/v1:gcpserviceaccount",
        "//apis/org/project-planton/provider/gcp/gcpstaticwebsite/v1:gcpstaticwebsite",
        "//apis/org/project-planton/provider/gcp/gcpsubnetwork/v1:gcpsubnetwork",
        "//apis/org/project-planton/provider/gcp/gcpvpc/v1:gcpvpc",
        "//apis/org/project-planton/provider/kubernetes/addon/altinityoperatorkubernetes/v1:altinityoperatorkubernetes",
        "//apis/org/project-planton/provider/kubernetes/addon/certmanagerkubernetes/v1:certmanagerkubernetes",
        "//apis/org/project-planton/provider/kubernetes/addon/elasticoperatorkubernetes/v1:elasticoperatorkubernetes",
        "//apis/org/project-planton/provider/kubernetes/addon/externaldnskubernetes/v1:externaldnskubernetes",
        "//apis/org/project-planton/provider/kubernetes/addon/externalsecretskubernetes/v1:externalsecretskubernetes",
        "//apis/org/project-planton/provider/kubernetes/addon/ingressnginxkubernetes/v1:ingressnginxkubernetes",
        "//apis/org/project-planton/provider/kubernetes/addon/istiokubernetes/v1:istiokubernetes",
        "//apis/org/project-planton/provider/kubernetes/addon/kafkaoperatorkubernetes/v1:kafkaoperatorkubernetes",
        "//apis/org/project-planton/provider/kubernetes/addon/perconapostgresqloperator/v1:perconapostgresqloperator",
        "//apis/org/project-planton/provider/kubernetes/addon/perconaservermongodboperator/v1:perconaservermongodboperator",
        "//apis/org/project-planton/provider/kubernetes/addon/perconaservermysqloperator/v1:perconaservermysqloperator",
        "//apis/org/project-planton/provider/kubernetes/addon/postgresoperatorkubernetes/v1:postgresoperatorkubernetes",
        "//apis/org/project-planton/provider/kubernetes/addon/solroperatorkubernetes/v1:solroperatorkubernetes",
        "//apis/org/project-planton/provider/kubernetes/workload/argocdkubernetes/v1:argocdkubernetes",
        "//apis/org/project-planton/provider/kubernetes/workload/clickhousekubernetes/v1:clickhousekubernetes",
        "//apis/org/project-planton/provider/kubernetes/workload/cronjobkubernetes/v1:cronjobkubernetes",
        "//apis/org/project-planton/provider/kubernetes/workload/elasticsearchkubernetes/v1:elasticsearchkubernetes",
        "//apis/org/project-planton/provider/kubernetes/workload/gitlabkubernetes/v1:gitlabkubernetes",
        "//apis/org/project-planton/provider/kubernetes/workload/grafanakubernetes/v1:grafanakubernetes",
        "//apis/org/project-planton/provider/kubernetes/workload/harborkubernetes/v1:harborkubernetes",
        "//apis/org/project-planton/provider/kubernetes/workload/helmrelease/v1:helmrelease",
        "//apis/org/project-planton/provider/kubernetes/workload/jenkinskubernetes/v1:jenkinskubernetes",
        "//apis/org/project-planton/provider/kubernetes/workload/kafkakubernetes/v1:kafkakubernetes",
        "//apis/org/project-planton/provider/kubernetes/workload/keycloakkubernetes/v1:keycloakkubernetes",
        "//apis/org/project-planton/provider/kubernetes/workload/kuberneteshttpendpoint/v1:kuberneteshttpendpoint",
        "//apis/org/project-planton/provider/kubernetes/workload/locustkubernetes/v1:locustkubernetes",
        "//apis/org/project-planton/provider/kubernetes/workload/microservicekubernetes/v1:microservicekubernetes",
        "//apis/org/project-planton/provider/kubernetes/workload/mongodbkubernetes/v1:mongodbkubernetes",
        "//apis/org/project-planton/provider/kubernetes/workload/natskubernetes/v1:natskubernetes",
        "//apis/org/project-planton/provider/kubernetes/workload/neo4jkubernetes/v1:neo4jkubernetes",
        "//apis/org/project-planton/provider/kubernetes/workload/openfgakubernetes/v1:openfgakubernetes",
        "//apis/org/project-planton/provider/kubernetes/workload/postgreskubernetes/v1:postgreskubernetes",
        "//apis/org/project-planton/provider/kubernetes/workload/prometheuskubernetes/v1:prometheuskubernetes",
        "//apis/org/project-planton/provider/kubernetes/workload/rediskubernetes/v1:rediskubernetes",
        "//apis/org/project-planton/provider/kubernetes/workload/signozkubernetes/v1:signozkubernetes",
        "//apis/org/project-planton/provider/kubernetes/workload/solrkubernetes/v1:solrkubernetes",
        "//apis/org/project-planton/provider/kubernetes/workload/stackjobrunnerkubernetes/v1:stackjobrunnerkubernetes",
        "//apis/org/project-planton/provider/kubernetes/workload/temporalkubernetes/v1:temporalkubernetes",
        "//apis/org/project-planton/provider/snowflake/snowflakedatabase/v1:snowflakedatabase",
        "//apis/org/project-planton/shared/cloudresourcekind",
        "//pkg/apis/gvk",
        "@com_github_pkg_errors//:errors",
        "@com_github_sirupsen_logrus//:logrus",
        "@in_gopkg_yaml_v3//:yaml_v3",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//reflect/protoreflect",
    ],
)

go_test(
    name = "crkreflect_test",
    srcs = [
        "kind_by_id_prefix_test.go",
        "kind_from_string_test.go",
    ],
    embed = [":crkreflect"],
    deps = ["//apis/org/project-planton/shared/cloudresourcekind"],
)
